# starloom

./: .gitignore  README.md  pyproject.toml
docs/: design_doc.md
docs/roadmap/: README.md
docs/roadmap/phase-01-foundations/: overview.md
docs/roadmap/phase-02-culture-and-naming/: overview.md
docs/roadmap/phase-03-world-generation/: overview.md
docs/roadmap/phase-04-content-and-validation/: overview.md
docs/roadmap/phase-05-query-and-hooks/: overview.md
docs/roadmap/phase-06-docs-and-integration/: overview.md
src/starloom/: __init__.py  config.py  hooks.py  rng.py
src/starloom/constraints/: rules.py
src/starloom/content/: loader.py  schema.py
src/starloom/culture/: __init__.py  factory.py  markov.py
src/starloom/domain/: models.py  types.py
src/starloom/generation/: errors.py  galaxy.py  locations.py  naming.py  nodes.py  planets.py  sectors.py  systems.py
src/starloom/geometry/: __init__.py
src/starloom/packs/default/: location_types.yaml  node_types.yaml  planet_classes.yaml  sector_types.yaml
tests/: test_config.py  test_constraints.py  test_content_pack.py  test_culture_factory.py  test_domain_models.py  test_domain_types.py  test_generation.py  test_geometry.py  test_hooks.py  test_markov.py  test_naming.py  test_placeholder.py  test_rng.py
